--- a/LoginSignupUI/Podfile
+++ b/LoginSignupUI/Podfile
@@ -1,12 +1,16 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '14.0'
+# platform :ios, '9.0'
 
 target 'LoginSignupUI' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
+  # Pods for LoginSignupUI
+
+  pod 'FirebaseAnalytics'
+  pod 'FirebaseAuth'
   pod 'FirebaseCore'
   pod 'FirebaseFirestore'
   pod ‘FirebaseDatabase‘
-  
+  pod 'FirebaseStorage'
 end
